# pyreportlib

./: .gitignore  README.MD  pyproject.toml  requirements.txt  setup.py
latexreport/: __init__.py  make_documents.py
latexreport/utils/: __init__.py  plot_df_utils.py  plot_utils.py
pyreportlib/: __init__.py  get_documents.py  make_documents.py  template.docx
pyreportlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyreportlib/utils/: __init__.py  excel_utils.py
tests/: example_filename.aux  example_filename.out  example_filename.tex  example_filename.toc  make_document_dict.json  test_generate_subplots.py  test_latexreport.py  test_make_document.py  test_make_latex_document.py  test_make_word_document.py  test_pyreportlib.py
tests/files/: some_random_latex_code.txt  some_random_text.txt  spreadsheet1.xlsx  template.docx  test1.xlsx  test2.xlsx  test3.xlsx  test4.xlsx
