[tool.poetry]
name = "pyreportlib"
version = "0.1.0"
description = ""
authors = ["bernt sørby <bsorby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylatex = "^1.4.0"
pandas = "^1.1.2"
python-docx = "^0.8.10"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
